Fix sizes on Safari

--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -43,7 +43,7 @@
 .Main .container-select {
   height: 50px;
   border: none;
-  padding: 20px;
+  padding: 10px 20px;
   background-color: #21b6a8;
   width: 100%;
   border-radius: 4px;
